--- a/frontend/deeptodos/package.json
+++ b/frontend/deeptodos/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "element-plus": "^2.12.0",
     "pinia": "^3.0.4",
-    "vue": "^3.5.25"
+    "vue": "^3.5.25",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
@@ -30,6 +31,7 @@
     "unplugin-vue-components": "^30.0.0",
     "vite": "^7.2.4",
     "vite-plugin-vue-devtools": "^8.0.5",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^3.1.5"
   }
 }
