--- a/frontend/deeptodos/package.json
+++ b/frontend/deeptodos/package.json
@@ -29,8 +29,10 @@
     "typescript": "~5.9.0",
     "unplugin-auto-import": "^20.3.0",
     "unplugin-vue-components": "^30.0.0",
+    "unplugin-vue-router": "^0.19.2",
     "vite": "^7.2.4",
     "vite-plugin-vue-devtools": "^8.0.5",
+    "vite-plugin-vue-layouts": "^0.11.0",
     "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^3.1.5"
   }
